# cheatbox

./: .gitignore  CHEATSHEET.md  README.md  pyproject.toml
.github/workflows/: publish.yml
cheatbox/: data.py  display.py  main.py
cheatbox/data/: bun.json  docker.json  linux.json  npm.json  tmux.json
data/: ascii.json  asdf.json  bun.json  cargo.json  conda.json  curl.json  distrobox.json  docker.json  du.json  fastfetch.json  find.json  git.json  go.json  grep.json  kubernetes.json  linux.json  make.json  nvm.json  pip.json  poetry.json  rsync.json  sdkman.json  ssh.json  sudo.json  systemctl.json  tar.json  tmux.json  useradd.json  uv.json
